--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,10 @@ repositories {
 }
 
 dependencies {
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine: 5.8.1'
-//    testImplementation 'org.junit.jupiter: junit-jupiter-api: 5.8.2'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
+    testImplementation 'org.testng:testng:7.1.0'
+
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
